--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
+  "engines":{
+    "node": "13.8.0",
+    "npm": "6.13.6",
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
