--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "engines":{
     "node": "13.8.0",
-    "npm": "6.13.6",
+    "npm": "6.13.6"
   },
   "scripts": {
     "start": "react-scripts start",
